--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1129,6 +1129,10 @@ $font-fallback-sans: YuGothic,
         }
       }
     }
+
+    .illust-cover {
+      width: 100%;
+    }
   }
 
   .comment {
