rework user page

--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -5,7 +5,8 @@
 {{- block body() }}
 
 <div class="row justify-content-center g-4">
-  <div class="col-12">
+  <!-- NOTE: mb-5 used here to give the main content a bit more space at the cost of some consistency -->
+  <div class="col-12 mb-5">
     <!-- Tag header -->
     <div class="custom-card bg-charcoal-surface1">
       <div class="row g-0">
