tune unauth page a bit

--- a/assets/views/unauthorized.jet.html
+++ b/assets/views/unauthorized.jet.html
@@ -1,8 +1,8 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container error">
-    <h1>Unauthorized</h1>
+<div class="row justify-content-center g-4">
+    <h1 class="text-center">Unauthorized</h1>
 
-    <p>You need to <a href="/settings#login">log in</a> to use this feature.</p>
+    <p class="text-center">You need to <a href="/settings#login">log in</a> to use this feature.</p>
 </div>
 {{- end }}
