--- a/assets/views/blocks/switcher.jet.html
+++ b/assets/views/blocks/switcher.jet.html
@@ -26,7 +26,7 @@
     {{- range i, k := paths }}
         <a href="{{ baseURL }}{{k}}" class="btn {{ len(k) >= 3 && k[len(k) - 3:] == "r18" ? "btn-danger" : "custom-btn-secondary" }} bg-charcoal-surface2 me-2 mb-2 d-flex align-items-center justify-content-center position-relative {{ activeState == k ? "active" : "" }}" aria-pressed="{{ activeState == k ? "true" : "false" }}" role="button">
             {{- if activeState == k }}
-                <i class="bi bi-circle-fill start-icon position-absolute start-0 ms-3"></i>
+                <i class="bi bi-circle-fill start-icon start-0 me-3"></i>
             {{- end }}
             <span>{{ names[i] }}</span>
         </a>
