--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -7,7 +7,7 @@
   <h1 class="text-center"><i class="bi bi-bar-chart-line-fill me-2"></i>{{ .Title }}</h1>
 
   {*
-  <!-- TODO: noscript version causing issues with the underlinenav (blank page on Content switch), disabling it for now -->
+  TODO: noscript version causing issues with the underlinenav (blank page on Content switch), disabling it for now
 
   <noscript>
     <div class="custom-card bg-charcoal-surface1 p-4">
